// https://dbdiagram.io/d/64369a1c8615191cfa8d54ca
Table experiment {
  _id ObjectId
  name string
  description string
  dynamic_vars Array
  created_at timestamp
  updated_at timestamp
}

Table prompt_template {
  _id ObjectId
  name string
  description string
  conversation  Array [
    note: '
      [{ role: system, content: "asdasd"}, 
       { role: user, content: "asdasd"}, 
       { role: assistant, content: "asdasd"},
        { role: user, content: "asdasd"}]
    '
  ]
  experiment_id ObjectId [ref: > experiment._id]
  created_at timestamp
  updated_at timestamp
}

Table test_cases {
  _id ObjectId
  name string
  description string
  dynamic_var_values  Object [
    note: '
      { var_1: value_1, var_2: value_2}
    '
  ]
  experiment_id ObjectId [ref: > experiment._id]
  expected_result Array
  created_at timestamp
  updated_at timestamp
}

Table evaluation {
  _id ObjectId
  model varchar
  eval varchar
  accuracy double
  prompt_template_id ObjectId [ref: > prompt_template._id]
  run_id int
  status string [
    note: '
      INITIATED
      COMPLETED
      RUNNING
      FAILED
    '
  ]
  evals_parameter  Object [
    note: '
      { jsonl_file_path: "abc.jsonl", yaml_file_path: "abc.yaml"}
    '
  ]
  retry_count int
  error_object String
  initiated_at timestamp
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table evaluation_test_case_relation {
  _id ObjectId
  evaluation_id ObjectId [ref: > evaluation._id ]
  prompt Array
  test_case_id ObjectId [ref: > test_cases._id]
  test_case_name String
  test_case_description String
  actual_result Array
  acceptable_result Array
  accuracy double
  jsonl_order int
  created_at timestamp
  updated_at timestamp

}